--- a/LEDev.html
+++ b/LEDev.html
@@ -38,7 +38,7 @@
             <div class="panel">
               <h2 class="panel_header">Color Select</h2>
               <div class="input">
-                <label class="input_label" for="color">#c8743a</label>
+                <label id="color_label" class="input_label" for="color">#c8743a</label>
                 <input id="color" type="color" />
               </div>
             </div>
