--- a/LEDev.html
+++ b/LEDev.html
@@ -36,12 +36,21 @@
               </button>
             </div>
             <div class="panel">
-              <h2 class="panel_header">Color Select</h2>
+              <h2 class="panel_header">Settings</h2>
               <div class="input">
-                <label id="color_label" class="input_label" for="color">#c8743a</label>
+                <label id="color_label" class="input_label" for="color">Color</label>
                 <input id="color" type="color" />
               </div>
+              <div class="input">
+                <label class="input_label" for="speed">Speed</label>
+                <input id="speed" class="input_text" typ="text" />
+              </div>
+              <div class="input">
+                <label class="input_label" for="speed">Length</label>
+                <input id="speed" class="input_text" typ="text" />
+              </div>
             </div>
+            <button type="button" class="submit"> Submit</button>
           </div>
         </div>
       </div>
